.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Team__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Job Roles</relationshipLabel>
    <relationshipName>Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>