.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Team__c/fields/Default_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Default_Job_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Job Role</label>
    <type>Checkbox</type>
</CustomField>