.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Team__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <label>ExternalID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>