.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Team__c/fields/FT_PT_Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>FT_PT_Interpretation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FT/PT Interpretation Rule</label>
    <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
    <relationshipLabel>Job Roles (FT/PT Interpretation Rule)</relationshipLabel>
    <relationshipName>Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>