.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Team__c/fields/FT_PT_Rate_Calculator__c.field-meta.xml
<CustomField>
    <fullName>FT_PT_Rate_Calculator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FT/PT Rate Calculator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_et__Rate_Calculator__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_et__Rate_Calculator__c</referenceTo>
    <relationshipLabel>Job Roles (FT/PT Rate Calculator)</relationshipLabel>
    <relationshipName>Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>