.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Team__c/fields/Job_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Role Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sirenum__TicketType__c.Is_Role_Competency__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sirenum__TicketType__c</referenceTo>
    <relationshipLabel>Job Roles</relationshipLabel>
    <relationshipName>Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>