.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Team__c/fields/Skill_Id__c.field-meta.xml
<CustomField>
    <fullName>Skill_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill Id</label>
    <referenceTo>sirenum__TicketType__c</referenceTo>
    <relationshipLabel>Job Roles (Skill Id)</relationshipLabel>
    <relationshipName>Skill_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>