.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Team__c/fields/WFM_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>WFM_Contract_Name__c</fullName>
    <formula>sirenum__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WFM Contract Name</label>
    <type>Text</type>
</CustomField>